chore: update plugin versions in parent pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 		<jacoco.version>0.8.13</jacoco.version>
-		<caffeine.version>3.2.1</caffeine.version>
+		<caffeine.version>3.2.2</caffeine.version>
 		<jxrPlugin.version>3.6.0</jxrPlugin.version>
 		<jib.version>3.4.6</jib.version>
 		<jdepend.version>2.1</jdepend.version>
@@ -56,11 +56,14 @@
 		<checkerframework.version>3.49.5</checkerframework.version>
 		<commons-lang3-version>3.18.0</commons-lang3-version>
 		<guava.version>33.4.8-jre</guava.version>
-		<errorProne.version>2.38.0</errorProne.version>
+		<errorProne.version>2.40.0</errorProne.version>
 		<apache.httpclient.version>4.5.14</apache.httpclient.version>
 		<hk2.api.version>3.1.1</hk2.api.version>
 		<xtream.version>1.4.21</xtream.version>
 		<apache.commons-compress.version>1.27.1</apache.commons-compress.version>
+		<pmdPlugin.version>3.27.0</pmdPlugin.version>
+		<mavenCompilerPlugin.version>3.14.0</mavenCompilerPlugin.version>
+		<checkstylePlugin.version>3.6.0</checkstylePlugin.version>
 	</properties>
 
 	<modules>
@@ -215,7 +218,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.3.1</version>
+				<version>${checkstylePlugin.version}</version>
 
 				<configuration>
 					<configLocation>config/checkstyle/checkstyle.xml</configLocation>
@@ -252,7 +255,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.14.0</version>
+				<version>${mavenCompilerPlugin.version}</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -339,7 +342,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.26.0</version>
+				<version>${pmdPlugin.version}</version>
 
 				<configuration>
 					<rulesets>
