feat: Config Service (#2)

--- a/report-aggregate/pom.xml
+++ b/report-aggregate/pom.xml
@@ -38,5 +38,17 @@
     </build>
 
     <dependencies>
+        <!-- CONFIG SERVICE MODULES -->
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>config-service-application</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>config-service-configuration</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
