feat: Discovery Service (#3)

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 	<modules>
 		<module>report-aggregate</module>
 		<module>services/config-service</module>
+		<module>services/discovery-service</module>
 	</modules>
 
 	<reporting>
