--- a/docker/apps.yml
+++ b/docker/apps.yml
@@ -22,6 +22,32 @@ services:
     networks:
       - pcforum_network
 
+  discovery-service:
+    image: dawid0604/pcforum-discovery-service-application
+    container_name: discovery-service
+    environment:
+      - CONFIG_SERVICE_INSTANCE=config-service
+      - DISCOVERY_SERVICE_PORT=${DISCOVERY_SERVICE_PORT}
+      - SERVER_PORT=${DISCOVERY_SERVICE_PORT}
+      - CONFIG_SERVICE_PORT=${CONFIG_SERVICE_PORT}
+    ports:
+      - "${DISCOVERY_SERVICE_PORT}:${DISCOVERY_SERVICE_PORT}"
+    restart: unless-stopped
+
+    depends_on:
+      config-service:
+        condition: service_healthy
+
+    healthcheck:
+      test: "curl --fail --silent localhost:${DISCOVERY_SERVICE_PORT}/actuator/health | grep UP || exit 1"
+      interval: 20s
+      timeout: 5s
+      retries: 5
+      start_period: 40s
+
+    networks:
+      - pcforum_network
+
 networks:
   pcforum_network:
     driver: bridge
