chore: fix typo in Test Coverage job

--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -34,5 +34,5 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: report-aggregate/target/site/jacoco-aggregate/jacoco.xml
+          files: report-aggregate/target/site/jacoco-aggregate/jacoco.xml
           fail_ci_if_error: true
