--- a/pom.xml
+++ b/pom.xml
@@ -64,12 +64,15 @@
 		<pmdPlugin.version>3.27.0</pmdPlugin.version>
 		<mavenCompilerPlugin.version>3.14.0</mavenCompilerPlugin.version>
 		<checkstylePlugin.version>3.6.0</checkstylePlugin.version>
+		<rest-assured.version>5.5.5</rest-assured.version>
+		<springdoc.version>2.5.0</springdoc.version>
 	</properties>
 
 	<modules>
 		<module>report-aggregate</module>
 		<module>services/config-service</module>
 		<module>services/discovery-service</module>
+		<module>services/user-service</module>
 	</modules>
 
 	<reporting>
@@ -155,6 +158,19 @@
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
 				<version>${xtream.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.rest-assured</groupId>
+				<artifactId>rest-assured</artifactId>
+				<version>${rest-assured.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+				<version>${springdoc.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
