feat: Thread Service (#7)

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<module>services/discovery-service</module>
 		<module>services/user-service</module>
 		<module>services/notification-service</module>
+        <module>services/thread-service</module>
 	</modules>
 
 	<reporting>
