feat: dashboards.yml (#7)

--- a/docker/dashboards.yml
+++ b/docker/dashboards.yml
@@ -22,6 +22,13 @@ services:
       NOTIFICATION_DATABASE_USER: ${NOTIFICATION_MICROSERVICE_POSTGRES_USER}
       NOTIFICATION_DATABASE_PASSWORD: ${NOTIFICATION_MICROSERVICE_POSTGRES_PASSWORD}
 
+      THREAD_SERVER_NAME: Thread Service
+      THREAD_SERVER_HOST: thread-service-postgres-db
+      THREAD_DATABASE_NAME: ${THREAD_MICROSERVICE_POSTGRES_DB}
+      THREAD_DATABASE_PORT: ${THREAD_MICROSERVICE_POSTGRES_PORT}
+      THREAD_DATABASE_USER: ${THREAD_MICROSERVICE_POSTGRES_USER}
+      THREAD_DATABASE_PASSWORD: ${THREAD_MICROSERVICE_POSTGRES_PASSWORD}
+
     ports:
       - "${PGADMIN_PORT}:80"
 
