feat: Post Service (#8)

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,8 @@
 		<module>services/user-service</module>
 		<module>services/notification-service</module>
         <module>services/thread-service</module>
-	</modules>
+        <module>services/post-service</module>
+    </modules>
 
 	<reporting>
 		<plugins>
