--- a/report-aggregate/pom.xml
+++ b/report-aggregate/pom.xml
@@ -132,7 +132,7 @@
             <version>${project.version}</version>
         </dependency>
 
-        <!-- THREAD SERVICE MODULES-->
+        <!-- THREAD SERVICE MODULES -->
         <dependency>
             <groupId>pl.dawid0604</groupId>
             <artifactId>thread-service-configuration</artifactId>
@@ -166,6 +166,43 @@
         <dependency>
             <groupId>pl.dawid0604</groupId>
             <artifactId>thread-service-application</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!-- POST SERVICE MODULES -->
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>post-service-configuration</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>post-service-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>post-service-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>post-service-persistence</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>post-service-web</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>pl.dawid0604</groupId>
+            <artifactId>post-service-application</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
