--- a/services/config-service/application/src/main/resources/configurations/post-service.yml
+++ b/services/config-service/application/src/main/resources/configurations/post-service.yml
@@ -35,7 +35,7 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: ${KAFKA_SERVER}
-      group-id: notification-group
+      group-id: post-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
