--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,8 @@
 		<module>services/notification-service</module>
         <module>services/thread-service</module>
         <module>services/post-service</module>
-    </modules>
+        <module>services/category-service</module>
+	</modules>
 
 	<reporting>
 		<plugins>
