--- a/docker/infra.yml
+++ b/docker/infra.yml
@@ -5,6 +5,7 @@ volumes:
   notification-service-postgres-volume:
   thread-service-postgres-volume:
   post-service-postgres-volume:
+  category-service-postgres-volume:
 
 services:
   user-service-postgres-db:
@@ -95,6 +96,31 @@ services:
     command: "-p ${POST_MICROSERVICE_POSTGRES_PORT}"
     volumes:
       - post-service-postgres-volume:/var/lib/postgresql/data
+
+    healthcheck:
+      test: >
+        bash -c "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} && 
+                 psql -U $${POSTGRES_USER} -d $${POSTGRES_DB} -c 'SELECT 1'"
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+    networks:
+      - pcforum_network
+
+  category-service-postgres-db:
+    image: postgres:17-alpine
+    container_name: category-service-postgres-db
+
+    environment:
+      - POSTGRES_USER=${CATEGORY_MICROSERVICE_POSTGRES_USER}
+      - POSTGRES_PASSWORD=${CATEGORY_MICROSERVICE_POSTGRES_PASSWORD}
+      - POSTGRES_DB=${CATEGORY_MICROSERVICE_POSTGRES_DB}
+      - PGPORT=${CATEGORY_MICROSERVICE_POSTGRES_PORT}
+
+    command: "-p ${CATEGORY_MICROSERVICE_POSTGRES_PORT}"
+    volumes:
+      - category-service-postgres-volume:/var/lib/postgresql/data
 
     healthcheck:
       test: >
