feat: dashboards.yml (#9)

--- a/docker/dashboards.yml
+++ b/docker/dashboards.yml
@@ -37,6 +37,13 @@ services:
       POST_DATABASE_USER: ${POST_MICROSERVICE_POSTGRES_USER}
       POST_DATABASE_PASSWORD: ${POST_MICROSERVICE_POSTGRES_PASSWORD}
 
+      CATEGORY_SERVER_NAME: Category Service
+      CATEGORY_SERVER_HOST: category-service-postgres-db
+      CATEGORY_DATABASE_NAME: ${CATEGORY_MICROSERVICE_POSTGRES_DB}
+      CATEGORY_DATABASE_PORT: ${CATEGORY_MICROSERVICE_POSTGRES_PORT}
+      CATEGORY_DATABASE_USER: ${CATEGORY_MICROSERVICE_POSTGRES_USER}
+      CATEGORY_DATABASE_PASSWORD: ${CATEGORY_MICROSERVICE_POSTGRES_PASSWORD}
+
     ports:
       - "${PGADMIN_PORT}:80"
 
