--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <module>services/thread-service</module>
         <module>services/post-service</module>
         <module>services/category-service</module>
+		<module>services/image-service</module>
 	</modules>
 
 	<reporting>
