feat: apps.yml (#10)

--- a/docker/apps.yml
+++ b/docker/apps.yml
@@ -188,6 +188,25 @@ services:
     networks:
       - pcforum_network
 
+  image-service:
+    image: dawid0604/pcforum-image-service-application
+    container_name: image-service
+    environment:
+      - CONFIG_SERVICE_INSTANCE=config-service
+      - CONFIG_SERVICE_PORT=${CONFIG_SERVICE_PORT}
+      - DISCOVERY_SERVICE_INSTANCE=discovery-service
+      - DISCOVERY_SERVICE_PORT=${DISCOVERY_SERVICE_PORT}
+    restart: unless-stopped
+    depends_on:
+      config-service:
+        condition: service_healthy
+
+      discovery-service:
+        condition: service_healthy
+
+    networks:
+      - pcforum_network
+
 networks:
   pcforum_network:
     driver: bridge
