fix: test coverage (#10)

--- a/report-aggregate/pom.xml
+++ b/report-aggregate/pom.xml
@@ -31,6 +31,7 @@
                 <configuration>
                     <excludes>
                         <exclude>**/PCForum**ServiceApplication.class</exclude>
+                        <exclude>**/configuration/CloudinaryConfig.class</exclude>
                     </excludes>
                 </configuration>
             </plugin>
