feat: dashboards.yml (#11)

--- a/docker/dashboards.yml
+++ b/docker/dashboards.yml
@@ -44,6 +44,13 @@ services:
       CATEGORY_DATABASE_USER: ${CATEGORY_MICROSERVICE_POSTGRES_USER}
       CATEGORY_DATABASE_PASSWORD: ${CATEGORY_MICROSERVICE_POSTGRES_PASSWORD}
 
+      MESSAGE_SERVER_NAME: Message Service
+      MESSAGE_SERVER_HOST: message-service-postgres-db
+      MESSAGE_DATABASE_NAME: ${MESSAGE_MICROSERVICE_POSTGRES_DB}
+      MESSAGE_DATABASE_PORT: ${MESSAGE_MICROSERVICE_POSTGRES_PORT}
+      MESSAGE_DATABASE_USER: ${MESSAGE_MICROSERVICE_POSTGRES_USER}
+      MESSAGE_DATABASE_PASSWORD: ${MESSAGE_MICROSERVICE_POSTGRES_PASSWORD}
+
     ports:
       - "${PGADMIN_PORT}:80"
 
